--- a/template/index.html
+++ b/template/index.html
@@ -6,7 +6,14 @@
     <title>{{ name }}</title>
   </head>
   <body>
+    <nav class="navbar navbar-dark bg-dark">
+        <span class="navbar-brand mb-0 h1">
+          {{ name }}
+        </span>
+    </nav>
+
     <div id="app"></div>
+
     <!-- built files will be auto injected -->
   </body>
 </html>
