--- a/template/static/app.scss
+++ b/template/static/app.scss
@@ -3,5 +3,5 @@
 //  specific
 //
 
-@import "~stijl/scss/ams-colorpalette";
-@import "~stijl/scss/ams-breakpoints";
+@import "custom";
+@import "~bootstrap/scss/bootstrap";
