setup new stijl repo

--- a/template/static/app.scss
+++ b/template/static/app.scss
@@ -1,7 +1,11 @@
-//
-//  Application specific styling
-//  specific
-//
+@import "~stijl/dist/scss/ams-colorpalette";
 
-@import "custom";
-@import "~bootstrap/scss/bootstrap";
+.nav {
+  background-color: $ams-lichtgrijs;
+  .nav-link {
+    text-decoration: none;
+    &:hover {
+      color: $ams-rood;
+    }
+  }
+}
