lot's of omgooiwerk. nu nog even een verwijzing naar een WIP branch in de stijl repo

--- a/template/index.html
+++ b/template/index.html
@@ -5,10 +5,9 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>{{ name }}</title>
   </head>
-  <body>
-    <!--The content is described in the App component-->
+  <body class="with-sidebars">
+  <!--The content is described in the App component-->
     <div id="app"></div>
-
     <!-- built files will be auto injected -->
   </body>
 </html>
